Completed Creating HousingLocationComponent and adding it to the Angular app

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,3 +10,6 @@
         <button type="button" class="btn btn-primary">Search</button>
     </form>
 </section>
+<section class="results">
+    <app-housing-location></app-housing-location>
+</section>
