--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,5 +11,5 @@
     </form>
 </section>
 <section class="results">
-    <app-housing-location></app-housing-location>
+    <app-housing-location [housingLocation]="housingLocation"></app-housing-location>
 </section>
