--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,10 @@
         <button type="button" class="btn btn-primary">Search</button>
     </form>
 </section>
-<section class="results">
-    <app-housing-location [housingLocation]="housingLocation"></app-housing-location>
-</section>
+<section class="results"> 
+    @for (housingLocation of housingLocationList; track housingLocation){ 
+    <app-housing-location 
+      [housingLocation]="housingLocation" 
+    ></app-housing-location> 
+    } 
+  </section> 
